<resources>
    <string name="app_name">RMS Sample App</string>
    <string name="okay">Okay</string>
    <string name="enter_amount">Enter Amount (In GBP)</string>
    <string name="enter_cashBack_amount">Enter Cashback Amount (In GBP)</string>
    <string name="pay">Pay</string>
    <string name="your_transaction">Transactions</string>
    <string name="receipts">Receipts</string>
    <string name="reports">Reports</string>
    <string name="cancel">Cancel</string>
    <string name="error_network_message">Failed to connect to server</string>
    <string name="transaction_in_progress">Transaction in progress…</string>
    <string name="error_invalid_input">Please enter a valid amount</string>
    <string name="error_invalid_cashback_input">Please enter a valid cashback amount</string>
    <string name="error_transaction_failed">Transaction failed. Please try again</string>
    <string name="error_no_terminal_available">No terminal available</string>
    <string name="error_no_terminal_found">Couldn\'t find a terminal</string>
    <string name="transaction_cancelled">Transaction cancelled</string>
    <string name="error_server_code">Server error code: %1$d</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="view">View</string>
    <string name="error_api_failed">Terminal list api failed</string>
    <string name="no_transaction_made_yet">No transaction made yet</string>
    <string name="check_status">Check Status</string>
    <string name="refresh_status">Refresh Status</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="cancel_transaction">Cancel Transaction</string>
    <string name="error_invalid_amount">Value should be greater than 1.00</string>
    <string name="error_cashback_amount_greater">Cashback value should be smaller than amount.</string>
    <string name="create_refund_transaction">Refund Transaction</string>
    <string name="st_filter">Filter</string>
    <string name="create_cashback">Cashback Transaction</string>
    <string name="cancel_cash_back">CashBack</string>
    <string name="cashback_transaction">Cashback</string>
    <string name="refund_transaction">Refund</string>
    <string name="sale_transaction">Sale</string>
    <string name="st_close">Close</string>
    <string name="reports_XBAL">Report XBAL</string>
    <string name="reports_ZBAL">Report ZBAL</string>
    <string name="reports_EOD">Report EOD</string>
    <string name="st_reset">Reset</string>
    <string name="st_reports_message">&#160;report created successfully</string>
    <string name="st_cancellation_success_message">Transaction cancellation request received</string>
</resources>