<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEnterAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_amount"
        android:paddingHorizontal="4dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/colorBlack" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="@id/tvEnterAmount"
        app:layout_constraintStart_toStartOf="@id/tvEnterAmount"
        app:layout_constraintTop_toBottomOf="@id/tvEnterAmount" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@id/tvEnterAmount"
        app:layout_constraintStart_toStartOf="@id/tvEnterAmount"
        app:layout_constraintTop_toBottomOf="@id/btPay" />

</androidx.constraintlayout.widget.ConstraintLayout>